--- a/ui/package.json
+++ b/ui/package.json
@@ -34,5 +34,12 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bits-ui": "^0.19.5",
+		"clsx": "^2.1.0",
+		"svelte-radix": "^1.0.3",
+		"tailwind-merge": "^2.2.1",
+		"tailwind-variants": "^0.2.0"
+	}
 }
