refactor: add logs to apis

--- a/server/Makefile
+++ b/server/Makefile
@@ -8,10 +8,10 @@ drop-db:
 	docker exec -it db dropdb checkpost 
 
 migrate-up:
-	migrate -path db/migration -database "postgres://postgres:example@localhost:5432/checkpost?sslmode=disable" -verbose up
+	migrate -path db/migration -database "postgres://postgres.iwpavmyqhggvhpyjisev:BKsTXPMIBRfpk9Ua@aws-0-us-east-1.pooler.supabase.com:5432/postgres" -verbose up
 
 migrate-down:
-	migrate -path db/migration -database "postgres://postgres:example@localhost:5432/checkpost?sslmode=disable" -verbose down
+	migrate -path db/migration -database "postgresql://checkpost_owner:UT7ZObH3xufi@ep-wispy-recipe-a43kgz9e.us-east-1.aws.neon.tech/checkpost"  -verbose down
 
 sqlc:
 	sqlc generate
