--- a/ui/package.json
+++ b/ui/package.json
@@ -36,10 +36,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.2.2",
 		"bits-ui": "^0.19.5",
 		"clsx": "^2.1.0",
+		"formsnap": "^1.0.0",
 		"svelte-radix": "^1.0.3",
+		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0"
+		"tailwind-variants": "^0.2.0",
+		"zod": "^3.23.4"
 	}
 }
