build: update entrypoint

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -32,4 +32,4 @@ RUN apk -U upgrade \
 # Exposes port 3000 because our program listens on that port
 EXPOSE 3000
 
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+ENTRYPOINT ["/usr/bin/dumb-init", "/go/src/checkpost-server/app"]
