feat: add ping-pong with resillient-websocket package

--- a/ui/package.json
+++ b/ui/package.json
@@ -41,7 +41,8 @@
 		"clsx": "^2.1.0",
 		"formsnap": "^1.0.0",
 		"reconnecting-websocket": "^4.4.0",
-		"socket.io-client": "^4.7.5",
+		"resilient-websocket": "^1.0.11",
+		"socket.io-client": "4.7.5",
 		"svelte-radix": "^1.0.3",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.2.1",
