feat: add toaster to indicate success and error

--- a/ui/package.json
+++ b/ui/package.json
@@ -40,7 +40,9 @@
 		"bits-ui": "^0.19.5",
 		"clsx": "^2.1.0",
 		"formsnap": "^1.0.0",
+		"mode-watcher": "^0.4.1",
 		"svelte-radix": "^1.0.3",
+		"svelte-sonner": "^0.3.27",
 		"sveltekit-superforms": "^2.12.6",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
